src/objects/Target__c.object
<CustomObject>
    <fields>
        <fullName>Budget__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Budget</label>
        <referenceTo>FGM_Base__Budget__c</referenceTo>
        <relationshipLabel>Targets</relationshipLabel>
        <relationshipName>Targets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <referenceTo>FGM_Base__Program__c</referenceTo>
        <relationshipLabel>Targets</relationshipLabel>
        <relationshipName>Targets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Target_Difference__c</fullName>
        <formula>Total_Budgeted_Amount__c  -  Target_Total_Allocation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Total_Allocation__c</fullName>
        <label>Target Total Allocation</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Budgeted_Amount__c</fullName>
        <label>Target Total Budget</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Target</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ED_Targets</fullName>
        <columns>Program__c</columns>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>contains</operation>
            <value>education</value>
        </filters>
        <label>ED Targets</label>
    </listViews>
    <listViews>
        <fullName>ED_Targets_2019</fullName>
        <columns>Program__c</columns>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>contains</operation>
            <value>education</value>
        </filters>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2019</value>
        </filters>
        <label>ED Targets 2019</label>
    </listViews>
    <listViews>
        <fullName>ELO_Targets</fullName>
        <columns>Program__c</columns>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>contains</operation>
            <value>ELO</value>
        </filters>
        <label>ELO Targets</label>
    </listViews>
    <listViews>
        <fullName>IDPI_Targets</fullName>
        <columns>Program__c</columns>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>contains</operation>
            <value>impact</value>
        </filters>
        <label>IDPI Targets</label>
    </listViews>
    <listViews>
        <fullName>YH_Targets_2017</fullName>
        <columns>Program__c</columns>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>YH</value>
        </filters>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <label>YH Targets - 2017</label>
    </listViews>
    <listViews>
        <fullName>YH_Targets_2018</fullName>
        <columns>Program__c</columns>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>YH</value>
        </filters>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <label>YH Targets - 2018</label>
    </listViews>
    <nameField>
        <label>Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>